progs/cpp/17e85776-7489-4e6c-a533-8fc17adebb2a/err.txt
progs/cpp/17e85776-7489-4e6c-a533-8fc17adebb2a/prog.cpp:6:14: warning: missing terminating " character [enabled by default]
       cout <<";
              ^
progs/cpp/17e85776-7489-4e6c-a533-8fc17adebb2a/prog.cpp:6:7: error: missing terminating " character
       cout <<";
       ^
progs/cpp/17e85776-7489-4e6c-a533-8fc17adebb2a/prog.cpp: In function ‘int main()’:
progs/cpp/17e85776-7489-4e6c-a533-8fc17adebb2a/prog.cpp:7:7: error: expected primary-expression before ‘return’
       return 0;
       ^
progs/cpp/17e85776-7489-4e6c-a533-8fc17adebb2a/prog.cpp:7:7: error: expected ‘;’ before ‘return’
